test/corpus/transactions.txt
=====================================
Simple transaction with two postings
=====================================

2024-01-05 * Whole Foods
    Expenses:Food:Groceries        $125.50
    Assets:Checking               -$125.50

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account)
      (amount
        (sign)
        (commodity)
        (quantity)))
    (dedent)))


=====================================
Account names with spaces
=====================================

2024-01-05 * Whole Foods
    Expenses:Food:Groceries with a Space        $125.50
    Assets:Checking               -$125.50

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account)
      (amount
        (sign)
        (commodity)
        (quantity)))
    (dedent)))


=====================================
Transaction without status marker
=====================================

2024-01-12 Grocery Store
    Expenses:Food        $98.75
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Transaction with pending status
=====================================

2024-01-15 ! Pending Payment
    Liabilities:Credit Card        $50.00
    Assets:Checking

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Transaction with code
=====================================

2024-01-20 * (CHECK-123) Rent Payment
    Expenses:Rent              $1,500.00
    Assets:Checking

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (code)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Transaction with commodity on right
=====================================

2024-01-31 * Salary
    Assets:Checking           5000.00 USD
    Income:Salary

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (quantity)
        (commodity)))
    (posting
      (account))
    (dedent)))

=====================================
Transaction with comment
=====================================

2024-02-01 * Groceries  ; weekly shopping
    Expenses:Food        $50
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description)
      (inline_comment))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Multiple transactions
=====================================

2024-01-01 * First
    Expenses:A        $10
    Assets:B

2024-01-02 * Second
    Expenses:C        $20
    Assets:D

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent))
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Transaction header with tag
=====================================

2024-02-01 * Groceries  ; category:food
    Expenses:Food        $50
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description)
      (inline_comment
        (tag
          (tag_name)
          (tag_value))))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Posting with inline comment and tag
=====================================

2024-02-02 * Shopping
    Expenses:Clothes     $75.00  ; item:shirt
    Assets:Checking

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity))
      (inline_comment
        (tag
          (tag_name)
          (tag_value))))
    (posting
      (account))
    (dedent)))

=====================================
Transaction with multiple tags
=====================================

2024-02-03 * Business Lunch  ; client:acme, project:consulting
    Expenses:Meals       $45.00
    Assets:Business

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description)
      (inline_comment
        (tag
          (tag_name)
          (tag_value))
        (tag
          (tag_name)
          (tag_value))))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Transaction with line comment between postings
=====================================

2024-02-04 * Utilities
    ; Monthly electricity bill
    Expenses:Utilities   $120.00
    Assets:Checking

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (line_comment)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Transaction with mixed comments and tags
=====================================

2024-02-05 * Office Supplies  ; vendor:staples
    ; Restocking printer paper
    Expenses:Office      $35.00  ; receipt:yes
    Assets:Petty Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description)
      (inline_comment
        (tag
          (tag_name)
          (tag_value))))
    (indent)
    (line_comment)
    (posting
      (account)
      (amount
        (commodity)
        (quantity))
      (inline_comment
        (tag
          (tag_name)
          (tag_value))))
    (posting
      (account))
    (dedent)))

=====================================
Posting with unit cost
=====================================

2024-03-01 * Currency Exchange
    Assets:EUR  100 EUR @ $1.10
    Assets:USD

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (quantity)
        (commodity))
      (cost
        (amount
          (commodity)
          (quantity))))
    (posting
      (account))
    (dedent)))

=====================================
Posting with total cost
=====================================

2024-03-02 * Stock Purchase
    Assets:Stock  10 AAPL @@ $1500
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (quantity)
        (commodity))
      (cost
        (amount
          (commodity)
          (quantity))))
    (posting
      (account))
    (dedent)))

=====================================
Posting with balance assertion
=====================================

2024-03-03 * Deposit
    Assets:Checking  $500 = $2500
    Income:Salary

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity))
      (assertion
        (amount
          (commodity)
          (quantity))))
    (posting
      (account))
    (dedent)))

=====================================
Posting with cost and assertion
=====================================

2024-03-04 * Buy Foreign Currency
    Assets:EUR  100 EUR @ $1.10 = 500 EUR
    Assets:USD

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (quantity)
        (commodity))
      (cost
        (amount
          (commodity)
          (quantity)))
      (assertion
        (amount
          (quantity)
          (commodity))))
    (posting
      (account))
    (dedent)))

=====================================
Posting with cost and comment
=====================================

2024-03-05 * Exchange with Note
    Assets:GBP  50 GBP @ $1.25  ; rate:market
    Assets:USD

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (quantity)
        (commodity))
      (cost
        (amount
          (commodity)
          (quantity)))
      (inline_comment
        (tag
          (tag_name)
          (tag_value))))
    (posting
      (account))
    (dedent)))

=====================================
Amount with sign after commodity
=====================================

2024-04-01 * Withdrawal
    Assets:Cash      $-50.00
    Assets:Checking  $+50.00

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))
    (posting
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))
    (dedent)))

=====================================
Various currency symbols
=====================================

2024-04-02 * International
    Expenses:Travel  €100.00
    Expenses:Food    £50.00
    Expenses:Other   ¥1000
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Quoted commodity symbol
=====================================

2024-04-03 * Stock Purchase
    Assets:Brokerage  10 "AAPL US Equity" @ $150
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (quantity)
        (commodity))
      (cost
        (amount
          (commodity)
          (quantity))))
    (posting
      (account))
    (dedent)))

=====================================
Mixed amount formats
=====================================

2024-04-04 * Various Formats
    Expenses:A       $100
    Expenses:B       -$50
    Expenses:C       $-25
    Expenses:D       100 USD
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account)
      (amount
        (sign)
        (commodity)
        (quantity)))
    (posting
      (account)
      (amount
        (commodity)
        (sign)
        (quantity)))
    (posting
      (account)
      (amount
        (quantity)
        (commodity)))
    (posting
      (account))
    (dedent)))

=====================================
Date with dot separator
=====================================

2024.01.15 * Dot Separator
    Expenses:Food  $50
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Date without leading zeros
=====================================

2024-1-5 * Single Digits
    Expenses:Food  $50
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Date without year
=====================================

01-15 * No Year
    Expenses:Food  $50
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Date without year and without leading zeros
=====================================

1/5 * Minimal Date
    Expenses:Food  $50
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))

=====================================
Date with dot separator without year
=====================================

12.25 * Holiday
    Expenses:Gifts  $100
    Assets:Cash

---

(source_file
  (transaction
    (transaction_header
      (date)
      (status)
      (description))
    (indent)
    (posting
      (account)
      (amount
        (commodity)
        (quantity)))
    (posting
      (account))
    (dedent)))
